- Se puede cambiar el estado de una solicitud a "Aprobada" o "Rechazada". - Al cambiar el estado, el solicitante recibe una notificación por correo electrónico con la decisión final. - El proceso de cambio de estado y la notificación deben ser consistentes.